[gd_scene load_steps=18 format=3 uid="uid://ccqf6gmxyxxn8"]

[ext_resource type="PackedScene" uid="uid://cqmvcq8hwe083" path="res://assets/scenes/stages/level_template.tscn" id="1_mw8se"]
[ext_resource type="Script" path="res://assets/scenes/stages/stage_2_11.gd" id="2_vgcmj"]
[ext_resource type="AudioStream" uid="uid://cy5c3s8ipjhvg" path="res://assets/sounds/sfxPoliceSiren.ogg" id="3_djddj"]
[ext_resource type="Texture2D" uid="uid://c07u65wuxpcen" path="res://assets/graphics/world2bg.png" id="3_he3pk"]
[ext_resource type="PackedScene" uid="uid://b1sxpag8rn06n" path="res://assets/scenes/objects/glowstick_light_rotater.tscn" id="4_bu6b0"]
[ext_resource type="PackedScene" uid="uid://l8ecukyy2ntu" path="res://assets/scenes/objects/destructible_block.tscn" id="4_ucg5p"]
[ext_resource type="PackedScene" uid="uid://dtlk6fu3tq7pm" path="res://assets/scenes/objects/hard_mode_ghost.tscn" id="5_r5vyf"]
[ext_resource type="Texture2D" uid="uid://b5m35xhylrqbk" path="res://assets/graphics/banktitle.png" id="6_rn2qt"]
[ext_resource type="PackedScene" uid="uid://ddwuwfghk7gey" path="res://assets/scenes/objects/coin.tscn" id="8_trm4s"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_65tey"]
size = Vector2(192, 304)

[sub_resource type="Shader" id="Shader_eb2yg"]
code = "shader_type canvas_item;

uniform vec4 C1 : source_color;
uniform vec4 C2 : source_color;
uniform vec4 C3 : source_color;
uniform float alpha = 1.0;

void fragment(){
    vec4 t = texture(TEXTURE, UV);
    vec4 color = floor(t.rgba * 255.0);
    if (color == vec4(255, 255, 255, 255)) {
        COLOR = C1;
	} else if (color == vec4(255, 0, 0, 255)) {
        COLOR = C2;
	} else if (color == vec4(0, 0, 0, 255)) {
        COLOR = C3;
    } else {
        COLOR = t;
    }
	if (COLOR.a != 0.0) {
		COLOR.a = alpha;
	}
}"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_kj431"]
resource_local_to_scene = true
shader = SubResource("Shader_eb2yg")
shader_parameter/C1 = Color(1, 0, 0.682353, 1)
shader_parameter/C2 = Color(0.11, 0, 0.0751667, 1)
shader_parameter/C3 = Color(0.59, 0, 0.403167, 1)
shader_parameter/alpha = 1.0

[sub_resource type="Shader" id="Shader_3oshw"]
code = "shader_type canvas_item;

uniform vec4 C1 : source_color;
uniform vec4 C2 : source_color;
uniform vec4 C3 : source_color;
uniform float alpha = 1.0;

void fragment(){
    vec4 t = texture(TEXTURE, UV);
    vec4 color = floor(t.rgba * 255.0);
    if (color == vec4(255, 255, 255, 255)) {
        COLOR = C1;
	} else if (color == vec4(255, 0, 0, 255)) {
        COLOR = C2;
	} else if (color == vec4(0, 0, 0, 255)) {
        COLOR = C3;
    } else {
        COLOR = t;
    }
	if (COLOR.a != 0.0) {
		COLOR.a = alpha;
	}
}"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_g5e6q"]
resource_local_to_scene = true
shader = SubResource("Shader_3oshw")
shader_parameter/C1 = Color(0, 0.729412, 0.65098, 1)
shader_parameter/C2 = Color(0, 0.129412, 0.0901961, 1)
shader_parameter/C3 = Color(0, 0.407843, 0.392157, 1)
shader_parameter/alpha = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vnai8"]
resource_local_to_scene = true
shader = SubResource("Shader_3oshw")
shader_parameter/C1 = Color(0.572549, 0.729412, 0, 1)
shader_parameter/C2 = Color(0.0666667, 0.129412, 0, 1)
shader_parameter/C3 = Color(0.27451, 0.411765, 0, 1)
shader_parameter/alpha = 1.0

[sub_resource type="Shader" id="Shader_maxvv"]
code = "shader_type canvas_item;

uniform vec4 C1 : source_color;
uniform vec4 C2 : source_color;
uniform vec4 C3 : source_color;
uniform vec4 C4 : source_color;
uniform float alpha = 1.0;

void fragment(){
    vec4 t = texture(TEXTURE, UV);
    vec4 color = floor(t.rgba * 255.0);
    if (color == vec4(255, 255, 255, 255)) {
        COLOR = C1;
	} else if (color == vec4(255, 0, 0, 255)) {
        COLOR = C2;
	} else if (color == vec4(0, 0, 0, 255)) {
        COLOR = C3;
	} else if (color == vec4(0, 0, 255, 255)) {
        COLOR = C4;
    } else {
        COLOR = t;
    }
	if (COLOR.a != 0.0) {
		COLOR.a = alpha;
	}
	
}"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hjkqp"]
resource_local_to_scene = true
shader = SubResource("Shader_maxvv")
shader_parameter/C1 = Color(1, 0.803922, 1, 1)
shader_parameter/C2 = Color(1, 0.411765, 0.490196, 1)
shader_parameter/C3 = Color(0, 0, 0, 1)
shader_parameter/C4 = Color(0.470588, 0.0470588, 0.145098, 1)
shader_parameter/alpha = 1.0

[node name="Stage2-11" instance=ExtResource("1_mw8se")]
z_as_relative = false
script = ExtResource("2_vgcmj")
level_name = "2-11: Heist To Meet You"
scene_ID = "stage2-11"
music_choice = "bgmLvl2"
progress_destination = "stage2-12"

[node name="sfxSiren" type="AudioStreamPlayer" parent="." index="0"]
stream = ExtResource("3_djddj")

[node name="Sprite2D" type="Sprite2D" parent="." index="1"]
z_index = -1
position = Vector2(512, 256)
texture = ExtResource("3_he3pk")

[node name="PoliceTrigger" type="Area2D" parent="." index="2"]
position = Vector2(640, 224)
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PoliceTrigger" index="0"]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_65tey")

[node name="GlowstickLightRotater" parent="." index="3" instance=ExtResource("4_bu6b0")]
visible = false
position = Vector2(512, 256)
LightType = 4

[node name="Tiles1" parent="." index="4"]
material = SubResource("ShaderMaterial_kj431")
layer_0/tile_data = PackedInt32Array(2097168, 0, 0, 2097169, 0, 0, 2097170, 0, 0, 2097171, 0, 0, 2097172, 0, 0, 2097173, 0, 0, 2097174, 0, 0, 2097175, 0, 0, 2097176, 0, 0, 2097177, 0, 0, 2097178, 0, 0, 2097179, 0, 0, 2097180, 0, 0, 2097181, 0, 0, 2097182, 0, 0, 2097183, 0, 0, 2097184, 0, 0, 2097185, 0, 0, 2097186, 0, 0, 2097187, 0, 0, 2097188, 0, 0, 2097189, 0, 0, 2097190, 0, 0, 2097191, 0, 0, 2097192, 0, 0, 2097193, 0, 0, 2097194, 0, 0, 2097195, 0, 0, 2097196, 0, 0, 2097197, 0, 0, 2097198, 0, 0, 2097199, 0, 0, 2031631, 0, 0, 1966095, 0, 0, 1900559, 0, 0, 1835023, 0, 0, 1769487, 0, 0, 1703951, 0, 0, 1638415, 0, 0, 1572879, 0, 0, 1507343, 0, 0, 1441807, 0, 0, 1376271, 0, 0, 1310735, 0, 0, 15, 0, 0, 65551, 0, 0, 131087, 0, 0, 196623, 0, 0, 262159, 0, 0, 327695, 0, 0, 393231, 0, 0, 458767, 0, 0, 524303, 0, 0, 589839, 0, 0, 655375, 0, 0, 720911, 0, 0, 786447, 0, 0, 851983, 0, 0, 917519, 0, 0, 983055, 0, 0, 1048591, 0, 0, 1114127, 0, 0, 1179663, 0, 0, 1245199, 0, 0, -65520, 0, 0, -65519, 0, 0, -65518, 0, 0, -65517, 0, 0, -65516, 0, 0, -65515, 0, 0, -65514, 0, 0, -65513, 0, 0, -65512, 0, 0, -65511, 0, 0, -65510, 0, 0, -65509, 0, 0, -65508, 0, 0, -65507, 0, 0, -65506, 0, 0, -65505, 0, 0, -65504, 0, 0, -65503, 0, 0, -65502, 0, 0, -65501, 0, 0, -65500, 0, 0, -65499, 0, 0, -65498, 0, 0, -65497, 0, 0, -65496, 0, 0, -65495, 0, 0, -65494, 0, 0, -65493, 0, 0, -65492, 0, 0, -65491, 0, 0, -65490, 0, 0, -65489, 0, 0, 48, 0, 0, 65584, 0, 0, 131120, 0, 0, 196656, 0, 0, 262192, 0, 0, 327728, 0, 0, 393264, 0, 0, 458800, 0, 0, 524336, 0, 0, 589872, 0, 0, 655408, 0, 0, 720944, 0, 0, 786480, 0, 0, 852016, 0, 0, 917552, 0, 0, 983088, 0, 0, 1048624, 0, 0, 1114160, 0, 0, 1179696, 0, 0, 1245232, 0, 0, 1310768, 0, 0, 1376304, 0, 0, 1441840, 0, 0, 1507376, 0, 0, 1572912, 0, 0, 1638448, 0, 0, 1703984, 0, 0, 1769520, 0, 0, 1835056, 0, 0, 1900592, 0, 0, 1966128, 0, 0, 2031664, 0, 0, -65521, 0, 0, 2097167, 0, 0, 2097200, 0, 0, -65488, 0, 0, 1507364, 0, 0, 1572900, 0, 0, 1572901, 0, 0, 1572908, 0, 0, 1572909, 0, 0, 1572910, 0, 0, 1572911, 0, 0, 1507375, 0, 0, 1507374, 0, 0, 1507373, 0, 0, 1507372, 0, 0, 1507365, 0, 0, 1507363, 0, 0, 1572899, 0, 0, 1507362, 0, 0, 1572898, 0, 0, 1572880, 0, 0, 1572881, 0, 0, 1572882, 0, 0, 1572883, 0, 0, 1572884, 0, 0, 1572885, 0, 0, 1572886, 0, 0, 1572887, 0, 0, 1572888, 0, 0, 1572889, 0, 0, 1572890, 0, 0, 1572891, 0, 0, 1572892, 0, 0, 1572893, 0, 0, 1572894, 0, 0, 1572895, 0, 0, 1572896, 0, 0, 1572897, 0, 0, 1507361, 0, 0, 1507360, 0, 0, 1507359, 0, 0, 1507358, 0, 0, 1507357, 0, 0, 1507356, 0, 0, 1507355, 0, 0, 1507354, 0, 0, 1507353, 0, 0, 1507352, 0, 0, 1507351, 0, 0, 1507350, 0, 0, 1507349, 0, 0, 1507348, 0, 0, 1507347, 0, 0, 1507346, 0, 0, 1507345, 0, 0, 1507344, 0, 0, 1638444, 0, 0, 1703980, 0, 0, 1769516, 0, 0, 1835052, 0, 0, 1900588, 0, 0, 1966124, 0, 0, 2031660, 0, 0, 2031661, 0, 0, 1966125, 0, 0, 1900589, 0, 0, 1835053, 0, 0, 1769517, 0, 0, 1703981, 0, 0, 1638445, 0, 0, 1638446, 0, 0, 1703982, 0, 0, 1769518, 0, 0, 1835054, 0, 0, 1900590, 0, 0, 1966126, 0, 0, 2031662, 0, 0, 2031663, 0, 0, 1966127, 0, 0, 1900591, 0, 0, 1835055, 0, 0, 1703983, 0, 0, 1638447, 0, 0, 1769519, 0, 0, 1441839, 0, 0, 1376303, 0, 0, 1310767, 0, 0, 1245231, 0, 0, 1179695, 0, 0, 1114159, 0, 0, 1048623, 0, 0, 983087, 0, 0, 917551, 0, 0, 852015, 0, 0, 786479, 0, 0, 720943, 0, 0, 655407, 0, 0, 589871, 0, 0, 524335, 0, 0, 458799, 0, 0, 393263, 0, 0, 327727, 0, 0, 262191, 0, 0, 196655, 0, 0, 131119, 0, 0, 65583, 0, 0, 47, 0, 0, 46, 0, 0, 65582, 0, 0, 131118, 0, 0, 196654, 0, 0, 262190, 0, 0, 327726, 0, 0, 393262, 0, 0, 458798, 0, 0, 524334, 0, 0, 589870, 0, 0, 655406, 0, 0, 720942, 0, 0, 786478, 0, 0, 852014, 0, 0, 917550, 0, 0, 983086, 0, 0, 1048622, 0, 0, 1114158, 0, 0, 1179694, 0, 0, 1245230, 0, 0, 1310766, 0, 0, 1376302, 0, 0, 1441838, 0, 0, 1441825, 0, 0, 1376289, 0, 0, 1310753, 0, 0, 1245217, 0, 0, 1179681, 0, 0, 1114145, 0, 0, 1048609, 0, 0, 983073, 0, 0, 917537, 0, 0, 1441824, 0, 0, 1376288, 0, 0, 1310752, 0, 0, 1245216, 0, 0, 1179680, 0, 0, 1114144, 0, 0, 1048608, 0, 0, 983072, 0, 0, 917536, 0, 0, 852000, 0, 0, 786464, 0, 0, 65568, 0, 0, 131104, 0, 0, 196640, 0, 0, 786465, 0, 0, 196641, 0, 0, 131105, 0, 0, 65569, 0, 0, 33, 0, 0, 32, 0, 0, 852001, 0, 0, 196642, 0, 0, 196643, 0, 0, 196644, 0, 0, 196645, 0, 0, 196646, 0, 0, 196647, 0, 0, 196648, 0, 0, 196649, 0, 0, 196650, 0, 0, 196651, 0, 0, 196652, 0, 0, 196653, 0, 0, 131117, 0, 0, 45, 0, 0, 44, 0, 0, 35, 0, 0, 34, 0, 0, 65570, 0, 0, 131106, 0, 0, 131107, 0, 0, 131108, 0, 0, 131109, 0, 0, 131110, 0, 0, 131111, 0, 0, 131112, 0, 0, 131113, 0, 0, 131114, 0, 0, 131115, 0, 0, 131116, 0, 0, 65581, 0, 0, 43, 0, 0, 42, 0, 0, 41, 0, 0, 40, 0, 0, 39, 0, 0, 38, 0, 0, 37, 0, 0, 36, 0, 0, 65571, 0, 0, 65572, 0, 0, 65573, 0, 0, 65574, 0, 0, 65575, 0, 0, 65576, 0, 0, 65577, 0, 0, 65578, 0, 0, 65579, 0, 0, 65580, 0, 0)

[node name="SwitchTiles1" parent="." index="6"]
material = SubResource("ShaderMaterial_g5e6q")

[node name="SwitchTiles2" parent="." index="7"]
material = SubResource("ShaderMaterial_vnai8")

[node name="BankTitle" type="Sprite2D" parent="." index="8"]
position = Vector2(640, 32)
scale = Vector2(0.858238, 0.680851)
texture = ExtResource("6_rn2qt")

[node name="DestructibleBlock19" parent="CollectibleObjects" index="0" instance=ExtResource("4_ucg5p")]
modulate = Color(0.690196, 0.619608, 1, 1)
position = Vector2(528, 80)

[node name="Sprite2D" parent="CollectibleObjects/DestructibleBlock19" index="0"]
material = SubResource("ShaderMaterial_hjkqp")

[node name="DestructibleBlock20" parent="CollectibleObjects" index="1" instance=ExtResource("4_ucg5p")]
modulate = Color(0.690196, 0.619608, 1, 1)
position = Vector2(528, 112)

[node name="Sprite2D" parent="CollectibleObjects/DestructibleBlock20" index="0"]
material = SubResource("ShaderMaterial_hjkqp")

[node name="DestructibleBlock21" parent="CollectibleObjects" index="2" instance=ExtResource("4_ucg5p")]
modulate = Color(0.690196, 0.619608, 1, 1)
position = Vector2(528, 144)

[node name="Sprite2D" parent="CollectibleObjects/DestructibleBlock21" index="0"]
material = SubResource("ShaderMaterial_hjkqp")

[node name="DestructibleBlock22" parent="CollectibleObjects" index="3" instance=ExtResource("4_ucg5p")]
modulate = Color(0.690196, 0.619608, 1, 1)
position = Vector2(528, 176)

[node name="Sprite2D" parent="CollectibleObjects/DestructibleBlock22" index="0"]
material = SubResource("ShaderMaterial_hjkqp")

[node name="DestructibleBlock23" parent="CollectibleObjects" index="4" instance=ExtResource("4_ucg5p")]
modulate = Color(0.690196, 0.619608, 1, 1)
position = Vector2(624, 384)

[node name="Sprite2D" parent="CollectibleObjects/DestructibleBlock23" index="0"]
material = SubResource("ShaderMaterial_hjkqp")

[node name="DestructibleBlock24" parent="CollectibleObjects" index="5" instance=ExtResource("4_ucg5p")]
modulate = Color(0.690196, 0.619608, 1, 1)
position = Vector2(656, 384)

[node name="Sprite2D" parent="CollectibleObjects/DestructibleBlock24" index="0"]
material = SubResource("ShaderMaterial_hjkqp")

[node name="DestructibleBlock25" parent="CollectibleObjects" index="6" instance=ExtResource("4_ucg5p")]
modulate = Color(0.690196, 0.619608, 1, 1)
position = Vector2(688, 384)

[node name="Sprite2D" parent="CollectibleObjects/DestructibleBlock25" index="0"]
material = SubResource("ShaderMaterial_hjkqp")

[node name="Coin" parent="CollectibleObjects" index="7" instance=ExtResource("8_trm4s")]
modulate = Color(1, 0.721569, 0.780392, 1)
position = Vector2(560, 88)

[node name="Coin2" parent="CollectibleObjects" index="8" instance=ExtResource("8_trm4s")]
modulate = Color(1, 0.721569, 0.780392, 1)
position = Vector2(592, 88)

[node name="Coin3" parent="CollectibleObjects" index="9" instance=ExtResource("8_trm4s")]
modulate = Color(1, 0.721569, 0.780392, 1)
position = Vector2(624, 88)

[node name="Coin4" parent="CollectibleObjects" index="10" instance=ExtResource("8_trm4s")]
modulate = Color(1, 0.721569, 0.780392, 1)
position = Vector2(656, 88)

[node name="Coin5" parent="CollectibleObjects" index="11" instance=ExtResource("8_trm4s")]
modulate = Color(1, 0.721569, 0.780392, 1)
position = Vector2(688, 88)

[node name="Coin6" parent="CollectibleObjects" index="12" instance=ExtResource("8_trm4s")]
modulate = Color(1, 0.721569, 0.780392, 1)
position = Vector2(720, 88)

[node name="Coin7" parent="CollectibleObjects" index="13" instance=ExtResource("8_trm4s")]
modulate = Color(1, 0.721569, 0.780392, 1)
position = Vector2(560, 120)

[node name="Coin8" parent="CollectibleObjects" index="14" instance=ExtResource("8_trm4s")]
modulate = Color(1, 0.721569, 0.780392, 1)
position = Vector2(592, 120)

[node name="Coin9" parent="CollectibleObjects" index="15" instance=ExtResource("8_trm4s")]
modulate = Color(1, 0.721569, 0.780392, 1)
position = Vector2(624, 120)

[node name="Coin10" parent="CollectibleObjects" index="16" instance=ExtResource("8_trm4s")]
modulate = Color(1, 0.721569, 0.780392, 1)
position = Vector2(656, 120)

[node name="Coin11" parent="CollectibleObjects" index="17" instance=ExtResource("8_trm4s")]
modulate = Color(1, 0.721569, 0.780392, 1)
position = Vector2(688, 120)

[node name="Coin12" parent="CollectibleObjects" index="18" instance=ExtResource("8_trm4s")]
modulate = Color(1, 0.721569, 0.780392, 1)
position = Vector2(720, 120)

[node name="Coin13" parent="CollectibleObjects" index="19" instance=ExtResource("8_trm4s")]
modulate = Color(1, 0.721569, 0.780392, 1)
position = Vector2(560, 152)

[node name="Coin14" parent="CollectibleObjects" index="20" instance=ExtResource("8_trm4s")]
modulate = Color(1, 0.721569, 0.780392, 1)
position = Vector2(592, 152)

[node name="Coin15" parent="CollectibleObjects" index="21" instance=ExtResource("8_trm4s")]
modulate = Color(1, 0.721569, 0.780392, 1)
position = Vector2(624, 152)

[node name="Coin16" parent="CollectibleObjects" index="22" instance=ExtResource("8_trm4s")]
modulate = Color(1, 0.721569, 0.780392, 1)
position = Vector2(656, 152)

[node name="Coin17" parent="CollectibleObjects" index="23" instance=ExtResource("8_trm4s")]
modulate = Color(1, 0.721569, 0.780392, 1)
position = Vector2(688, 152)

[node name="Coin18" parent="CollectibleObjects" index="24" instance=ExtResource("8_trm4s")]
modulate = Color(1, 0.721569, 0.780392, 1)
position = Vector2(720, 152)

[node name="Coin19" parent="CollectibleObjects" index="25" instance=ExtResource("8_trm4s")]
modulate = Color(1, 0.721569, 0.780392, 1)
position = Vector2(560, 184)

[node name="Coin20" parent="CollectibleObjects" index="26" instance=ExtResource("8_trm4s")]
modulate = Color(1, 0.721569, 0.780392, 1)
position = Vector2(592, 184)

[node name="Coin21" parent="CollectibleObjects" index="27" instance=ExtResource("8_trm4s")]
modulate = Color(1, 0.721569, 0.780392, 1)
position = Vector2(624, 184)

[node name="Coin22" parent="CollectibleObjects" index="28" instance=ExtResource("8_trm4s")]
modulate = Color(1, 0.721569, 0.780392, 1)
position = Vector2(656, 184)

[node name="Coin23" parent="CollectibleObjects" index="29" instance=ExtResource("8_trm4s")]
modulate = Color(1, 0.721569, 0.780392, 1)
position = Vector2(688, 184)

[node name="Coin24" parent="CollectibleObjects" index="30" instance=ExtResource("8_trm4s")]
modulate = Color(1, 0.721569, 0.780392, 1)
position = Vector2(720, 184)

[node name="Coin25" parent="CollectibleObjects" index="31" instance=ExtResource("8_trm4s")]
modulate = Color(1, 0.721569, 0.780392, 1)
position = Vector2(560, 216)

[node name="Coin26" parent="CollectibleObjects" index="32" instance=ExtResource("8_trm4s")]
modulate = Color(1, 0.721569, 0.780392, 1)
position = Vector2(592, 216)

[node name="Coin27" parent="CollectibleObjects" index="33" instance=ExtResource("8_trm4s")]
modulate = Color(1, 0.721569, 0.780392, 1)
position = Vector2(624, 216)

[node name="Coin28" parent="CollectibleObjects" index="34" instance=ExtResource("8_trm4s")]
modulate = Color(1, 0.721569, 0.780392, 1)
position = Vector2(656, 216)

[node name="Coin29" parent="CollectibleObjects" index="35" instance=ExtResource("8_trm4s")]
modulate = Color(1, 0.721569, 0.780392, 1)
position = Vector2(688, 216)

[node name="Coin30" parent="CollectibleObjects" index="36" instance=ExtResource("8_trm4s")]
modulate = Color(1, 0.721569, 0.780392, 1)
position = Vector2(720, 216)

[node name="Coin31" parent="CollectibleObjects" index="37" instance=ExtResource("8_trm4s")]
modulate = Color(1, 0.721569, 0.780392, 1)
position = Vector2(560, 248)

[node name="Coin32" parent="CollectibleObjects" index="38" instance=ExtResource("8_trm4s")]
modulate = Color(1, 0.721569, 0.780392, 1)
position = Vector2(592, 248)

[node name="Coin33" parent="CollectibleObjects" index="39" instance=ExtResource("8_trm4s")]
modulate = Color(1, 0.721569, 0.780392, 1)
position = Vector2(624, 248)

[node name="Coin34" parent="CollectibleObjects" index="40" instance=ExtResource("8_trm4s")]
modulate = Color(1, 0.721569, 0.780392, 1)
position = Vector2(656, 248)

[node name="Coin35" parent="CollectibleObjects" index="41" instance=ExtResource("8_trm4s")]
modulate = Color(1, 0.721569, 0.780392, 1)
position = Vector2(688, 248)

[node name="Coin36" parent="CollectibleObjects" index="42" instance=ExtResource("8_trm4s")]
modulate = Color(1, 0.721569, 0.780392, 1)
position = Vector2(720, 248)

[node name="Coin37" parent="CollectibleObjects" index="43" instance=ExtResource("8_trm4s")]
modulate = Color(1, 0.721569, 0.780392, 1)
position = Vector2(560, 280)

[node name="Coin38" parent="CollectibleObjects" index="44" instance=ExtResource("8_trm4s")]
modulate = Color(1, 0.721569, 0.780392, 1)
position = Vector2(592, 280)

[node name="Coin39" parent="CollectibleObjects" index="45" instance=ExtResource("8_trm4s")]
modulate = Color(1, 0.721569, 0.780392, 1)
position = Vector2(624, 280)

[node name="Coin40" parent="CollectibleObjects" index="46" instance=ExtResource("8_trm4s")]
modulate = Color(1, 0.721569, 0.780392, 1)
position = Vector2(656, 280)

[node name="Coin41" parent="CollectibleObjects" index="47" instance=ExtResource("8_trm4s")]
modulate = Color(1, 0.721569, 0.780392, 1)
position = Vector2(688, 280)

[node name="Coin42" parent="CollectibleObjects" index="48" instance=ExtResource("8_trm4s")]
modulate = Color(1, 0.721569, 0.780392, 1)
position = Vector2(720, 280)

[node name="Coin43" parent="CollectibleObjects" index="49" instance=ExtResource("8_trm4s")]
modulate = Color(1, 0.721569, 0.780392, 1)
position = Vector2(560, 312)

[node name="Coin44" parent="CollectibleObjects" index="50" instance=ExtResource("8_trm4s")]
modulate = Color(1, 0.721569, 0.780392, 1)
position = Vector2(592, 312)

[node name="Coin45" parent="CollectibleObjects" index="51" instance=ExtResource("8_trm4s")]
modulate = Color(1, 0.721569, 0.780392, 1)
position = Vector2(624, 312)

[node name="Coin46" parent="CollectibleObjects" index="52" instance=ExtResource("8_trm4s")]
modulate = Color(1, 0.721569, 0.780392, 1)
position = Vector2(656, 312)

[node name="Coin47" parent="CollectibleObjects" index="53" instance=ExtResource("8_trm4s")]
modulate = Color(1, 0.721569, 0.780392, 1)
position = Vector2(688, 312)

[node name="Coin48" parent="CollectibleObjects" index="54" instance=ExtResource("8_trm4s")]
modulate = Color(1, 0.721569, 0.780392, 1)
position = Vector2(720, 312)

[node name="Coin49" parent="CollectibleObjects" index="55" instance=ExtResource("8_trm4s")]
modulate = Color(1, 0.721569, 0.780392, 1)
position = Vector2(560, 344)

[node name="Coin50" parent="CollectibleObjects" index="56" instance=ExtResource("8_trm4s")]
modulate = Color(1, 0.721569, 0.780392, 1)
position = Vector2(592, 344)

[node name="Coin51" parent="CollectibleObjects" index="57" instance=ExtResource("8_trm4s")]
modulate = Color(1, 0.721569, 0.780392, 1)
position = Vector2(624, 344)

[node name="Coin52" parent="CollectibleObjects" index="58" instance=ExtResource("8_trm4s")]
modulate = Color(1, 0.721569, 0.780392, 1)
position = Vector2(656, 344)

[node name="Coin53" parent="CollectibleObjects" index="59" instance=ExtResource("8_trm4s")]
modulate = Color(1, 0.721569, 0.780392, 1)
position = Vector2(688, 344)

[node name="Coin54" parent="CollectibleObjects" index="60" instance=ExtResource("8_trm4s")]
modulate = Color(1, 0.721569, 0.780392, 1)
position = Vector2(720, 344)

[node name="GoalHole" parent="MainObjects" index="0"]
modulate = Color(1, 0.721569, 0.780392, 1)
position = Vector2(288, 424)

[node name="CatGolf" parent="MainObjects" index="1"]
modulate = Color(1, 0.721569, 0.780392, 1)
position = Vector2(288, 32)

[node name="HardModeGhost" parent="MainObjects/UncannyCats" index="0"]
modulate = Color(1, 0.721569, 0.780392, 1)
position = Vector2(288, 344)

[node name="HardModeGhost2" parent="MainObjects/UncannyCats" index="1" instance=ExtResource("5_r5vyf")]
modulate = Color(1, 0.721569, 0.780392, 1)
position = Vector2(480, 344)

[connection signal="body_entered" from="PoliceTrigger" to="." method="_on_police_trigger_body_entered"]

[editable path="CollectibleObjects/DestructibleBlock19"]
[editable path="CollectibleObjects/DestructibleBlock20"]
[editable path="CollectibleObjects/DestructibleBlock21"]
[editable path="CollectibleObjects/DestructibleBlock22"]
[editable path="CollectibleObjects/DestructibleBlock23"]
[editable path="CollectibleObjects/DestructibleBlock24"]
[editable path="CollectibleObjects/DestructibleBlock25"]
